Added functionality of backend
