# timing-service/timing-service.api/api.yaml
@@ -23,7 +23,7 @@ components:
         description:
           type: string
           description: The description of the activity
-        useruuid:
+        owneruuid:
           type: string
           description: The uuid of the user that owns this activity
 
@@ -43,6 +43,14 @@ components:
         uuid:
           type: string
           description: The uuid of this record
+        duration:
+          type: integer
+          description: The duration of the record
+        state:
+          type: string
+          enum:
+          - STARTED
+          - ENDED
 
     operationResponse:
       properties:
